# fdm-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  REFACTORING_TODO.md  TODO.md  config.py  fdm-simulator.code-workspace  fdm_simulator.html  main.py  materials.json  materials.json.backup  pyproject.toml  run_all_training.py  test.gcode
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/processed/: c3_processed_data.csv
data/raw/: 1-s2.0-S2352340922000580-mmc1.xlsx - Data.csv  C3-RAW DATA.csv  composite_data_alarifi.csv  dimensional_accuracy_deswal.csv  hardness_data_kadam.csv  multimaterial_bond_yadav.csv  warpage_data_nazan.csv
data/raw/filament_tables/: table_1_page_4.csv  table_2_page_5.csv  table_3_page_5.csv  table_4_page_6.csv  table_5_page_6.csv  table_6_page_6.csv  table_7_page_8.csv  table_8_page_10.csv  table_9_page_11.csv
scripts/: extract_pdf_tables.py  ingest_filament_data.py  rename_pdfs.py  test_recommendation.py
tests/: conftest.py  test_gcode_parser.py  test_health.py  test_health_inprocess.py  test_sensitivity.py  test_stl_analysis.py
